homeassistant/homeassistant.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: homeassistant
spec: 
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: homeassistant
  strategy:
    # since we're using hostNetwork: true we can't do a rolling update since the port won't be free
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: homeassistant
    spec:
      containers:
      - image: homeassistant
        imagePullPolicy: IfNotPresent
        name: homeassistant
        ports:
        - containerPort: 8123
          name: ui
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: data
          mountPath: /config
        - name: homeassistant-cm
          mountPath: /config/configuration.yaml
          subPath: configuration.yaml
        - name: homeassistant-cm
          mountPath: /config/secrets.yaml
          subPath: secrets.yaml
        livenessProbe:
          httpGet:
            path: /
            port: 8123
        readinessProbe:
          httpGet:
            path: /
            port: 8123
        startupProbe:
          httpGet:
            path: /
            port: 8123
          failureThreshold: 30
          periodSeconds: 10
        #securityContext:
        #  privileged: true
      dnsPolicy: ClusterFirst
      hostNetwork: true # to allow plugins like sonos to be called from the outside world
      #´Don't forget to also
      # firewall-cmd --zone=public --add-port=30010-30030/tcp --permanent
      # firewall-cmd --reload
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: homeassistant-pv-claim
      - name: homeassistant-cm
        configMap:
          name: homeassistant
