homeassistant/signalapi.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: signal-cli-rest-api
spec: 
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: signal-cli-rest-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: signal-cli-rest-api
    spec:
      containers:
      - image: signal-cli-rest-api
        imagePullPolicy: IfNotPresent
        name: signal-cli-rest-api
        ports:
        - containerPort: 8080
          name: ui
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: data
          mountPath: /home/.local/share/signal-cli
        # livenessProbe:
        #   httpGet:
        #     path: /v1/groups/+1111
        #     port: 8080
        # readinessProbe:
        #   httpGet:
        #     path: /v1/groups/+1111
        #     port: 8080
        # startupProbe:
        #   httpGet:
        #     path: /v1/groups/+1111
        #     port: 8080
          failureThreshold: 30
          periodSeconds: 10
      dnsPolicy: ClusterFirst
      hostNetwork: false 
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: signal-cli-rest-api-pv-claim
