homeassistant/homeassistant.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8123
    protocol: TCP
    targetPort: 8123
    name: ui
  selector:
    app: homeassistant
  sessionAffinity: None
  type: NodePort
