homeassistant/signalapi.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal-cli-rest-api
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: ui
  selector:
    app: signal-cli-rest-api
  sessionAffinity: None
  type: NodePort
